# expected

./: .travis.yml  CMakeLists.txt  README.md
tests/: assignment.cpp  bases.cpp  constexpr.cpp  constructors.cpp  emplace.cpp  extensions.cpp  issues.cpp  noexcept.cpp  observers.cpp  relops.cpp  swap.cpp
